test/Fail/Issue215.agda

module Issue215 where

open import Imports.Bool

{-# COMPILE GHC Bool = data Bool (True | False) #-}
